--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.14.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-timer-mixin": "^0.13.3",
     "superagent": "^2.2.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
