--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "keywords": [
     "webapp",
-    "olympicGames"
+    "api",
+    "thesaurus"
   ],
   "author": "Joolz Justin Kamon Sach",
   "license": "MIT",
