--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "cobra-telegram",
   "version": "0.1.0",
-  "description": "webapp displaying olympic games info",
+  "description": "webapp displaying COOL THESARUOUS STUFF info",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js",
     "start": "webpack-dev-server --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -24,24 +22,28 @@
   },
   "homepage": "https://github.com/shsaci/cobra-telegram#readme",
   "dependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.11.6",
-    "cors": "^2.7.1",
-    "express": "^4.14.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-timer-mixin": "^0.13.3",
-    "superagent": "^2.2.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1"
   },
   "babel": {
     "presets": [
       "es2015",
       "react"
     ]
-  }
+  },
+  "devDependencies": {
+  "babel-core": "^6.13.2",
+  "babel-loader": "^6.2.5",
+  "babel-preset-es2015": "^6.13.2",
+  "babel-preset-react": "^6.11.1",
+  "babel-register": "^6.11.6",
+  "cors": "^2.7.1",
+  "express": "^4.14.0",
+  "jsx-loader": "^0.13.2",
+  "react": "^15.3.0",
+  "react-dom": "^15.3.0",
+  "react-router": "^2.6.1",
+  "react-timer-mixin": "^0.13.3",
+  "superagent": "^2.2.0",
+  "webpack": "^1.13.2",
+  "webpack-dev-server": "^1.14.1"
+}
 }
