rectified package.json issues

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "webapp displaying COOL THESARUOUS STUFF info",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
+    "start": "webpack-dev-server --hot --inline"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,6 @@
     "url": "https://github.com/shsaci/cobra-telegram/issues"
   },
   "homepage": "https://github.com/shsaci/cobra-telegram#readme",
-  "dependencies": {
-  },
   "babel": {
     "presets": [
       "es2015",
@@ -45,5 +43,5 @@
   "superagent": "^2.2.0",
   "webpack": "^1.13.2",
   "webpack-dev-server": "^1.14.1"
-}
+  }
 }
