--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "url": "https://github.com/shsaci/cobra-telegram/issues"
   },
   "homepage": "https://github.com/shsaci/cobra-telegram#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "babel": {
     "presets": [
       "es2015",
@@ -31,20 +30,20 @@
     ]
   },
   "devDependencies": {
-  "babel-core": "^6.13.2",
-  "babel-loader": "^6.2.5",
-  "babel-preset-es2015": "^6.13.2",
-  "babel-preset-react": "^6.11.1",
-  "babel-register": "^6.11.6",
-  "cors": "^2.7.1",
-  "express": "^4.14.0",
-  "jsx-loader": "^0.13.2",
-  "react": "^15.3.0",
-  "react-dom": "^15.3.0",
-  "react-router": "^2.6.1",
-  "react-timer-mixin": "^0.13.3",
-  "superagent": "^2.2.0",
-  "webpack": "^1.13.2",
-  "webpack-dev-server": "^1.14.1"
-}
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.11.6",
+    "cors": "^2.7.1",
+    "express": "^4.14.0",
+    "jsx-loader": "^0.13.2",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-router": "^2.6.1",
+    "react-timer-mixin": "^0.13.3",
+    "superagent": "^2.2.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
